--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   prodmais:
     deploy:
@@ -6,12 +8,14 @@ services:
           memory: 1024M
         reservations:
           memory: 512M
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     volumes:
       - .:/var/www/html/prodmais
-    ports: 
+    environment:
+      - TIMEZONE=Etc/GMT-3
+    ports:
       - "8080:80"
     container_name: prodmais
     tty: true
